Sutter Health/src/objects/Survey_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Survey_Taken__r.Contact__r.Employee_Affiliate_Facility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Survey_Taken__r.Case__r.Owner:User.FirstName + &apos; &apos;+ Survey_Taken__r.Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Outcome__c</fullName>
        <label>Agent Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Issue Not Applicable to Agent</fullName>
                </value>
                <value>
                    <fullName>KM Needed</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aging_Days__c</fullName>
        <formula>if(NOT(ISPICKVAL(Status__c,&apos;closed&apos;)), TODAY() - DATEVALUE(CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How long has the feedback item been open?</inlineHelpText>
        <label>Aging (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Survey_Taken__r.Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Survey_Taken__r.Case__r.Owner:User.FirstName +&apos; &apos;+Survey_Taken__r.Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Owner To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>S3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Survey_Taken__r.Case__r.Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry_Type_Txt__c</fullName>
        <label>Customer Inquiry Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry_Type__c</fullName>
        <formula>Survey_Taken__r.Case__r.Customer_Inquiry_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Inquiry Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Outcome__c</fullName>
        <label>Customer Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Complaint</fullName>
                </value>
                <value>
                    <fullName>Escalated to Tier 3</fullName>
                </value>
                <value>
                    <fullName>No Customer Response</fullName>
                </value>
                <value>
                    <fullName>Process Issue</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Sub_Intent__c</fullName>
        <formula>TEXT(Survey_Taken__r.Case__r.Customer_Sub_Intents__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Sub-Intent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_To_Send_Mail1__c</fullName>
        <label>Email Address To Send Mail1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address_To_Send_Mail2__c</fullName>
        <label>Email Address To Send Mail2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address_To_Send_Mail3__c</fullName>
        <label>Email Address To Send Mail3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address_Txt__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Survey_Taken__r.Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Id_Number__c</fullName>
        <formula>Survey_Taken__r.Contact__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Id Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalURL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Email_Need_To_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Email Need To Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Survey_Taken__r.Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Category__c</fullName>
        <inlineHelpText>0-6=Detractor 
7-8= Passive
9-10= Promoter</inlineHelpText>
        <label>Net Promoter Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_Comment__c</fullName>
        <label>Outcome Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>What was the outcome of the survey feedback item?</inlineHelpText>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Escalated to Tier 3</fullName>
                </value>
                <value>
                    <fullName>Process Issue</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outside_of_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outside of SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Account_Number__c</fullName>
        <formula>Survey_Taken__r.Case__r.Patient_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poor_NPS_Quality_Score_Reason__c</fullName>
        <label>Poor NPS/Quality Score Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow-up Did Not Occur in Time</fullName>
                </value>
                <value>
                    <fullName>Lack of Agent Expertise in Subject Area</fullName>
                </value>
                <value>
                    <fullName>Poor Customer Service Experience</fullName>
                </value>
                <value>
                    <fullName>Received Inaccurate Information</fullName>
                </value>
                <value>
                    <fullName>S3 Is the Only Option</fullName>
                </value>
                <value>
                    <fullName>Unhappy with Call Tree/Prompts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Call_Back_Number_Txt__c</fullName>
        <label>Preferred Call Back Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Call_Back_Number__c</fullName>
        <formula>Survey_Taken__r.Case__r.Preferred_Callback_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Call Back Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_1_Was_your_issue_resolved__c</fullName>
        <label>Q.1 Was your issue resolved? </label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_2_Times_you_contacted_S3_for_issue__c</fullName>
        <label>Q.2 # Times you contacted S3 for issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_3_Rating_on_QoS_you_got_from_initial_a__c</fullName>
        <label>Q.3 Agent quality score rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_4_Recommend_S3_Center_to_a_colleague__c</fullName>
        <label>Q.4 Likely to recommend S3 (NPS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Repeat_Call__c</fullName>
        <label>Reason for Repeat Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appeal Process</fullName>
                </value>
                <value>
                    <fullName>Customer Did Not Receive Resolution</fullName>
                </value>
                <value>
                    <fullName>HR Business Partner Related</fullName>
                </value>
                <value>
                    <fullName>Manager Feedback</fullName>
                </value>
                <value>
                    <fullName>No History of Previous Call</fullName>
                </value>
                <value>
                    <fullName>Previous Call Unrelated to Current Issue</fullName>
                </value>
                <value>
                    <fullName>Resolution Prompted Adtl Questions</fullName>
                </value>
                <value>
                    <fullName>SR Closed Prior to Resolution</fullName>
                </value>
                <value>
                    <fullName>Status Update</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Case_Template__c</fullName>
        <formula>Survey_Taken__r.Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Case Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case_URL__c</fullName>
        <label>Related Case URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Survey_Taken__r.Case__c &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Survey_Taken__r.Case__c &amp; &quot;&apos;}&quot;, Survey_Taken__r.Case__r.CaseNumber, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email_Address__c</fullName>
        <formula>Survey_Taken__r.Case__r.Requestor_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Path__c</fullName>
        <label>SR Path</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 3 Multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <formula>TEXT(Survey_Taken__r.Case__r.Sub_Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyDate__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Date_Text__c</fullName>
        <formula>IF ( DATEVALUE(Survey_Taken__r.CreatedDate) &gt;=
DATE ( YEAR (DATEVALUE(Survey_Taken__r.CreatedDate)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(Survey_Taken__r.CreatedDate)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Survey_Taken__r.CreatedDate)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(Survey_Taken__r.CreatedDate) &lt;
DATE ( YEAR (DATEVALUE(Survey_Taken__r.CreatedDate)),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(Survey_Taken__r.CreatedDate)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Survey_Taken__r.CreatedDate)),11,1) - DATE (1900,1,7),7))
),
LEFT ( TEXT (Survey_Taken__r.CreatedDate- 7/24 ), 16),
LEFT ( TEXT (Survey_Taken__r.CreatedDate- 8/24), 16)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Date(Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <description>Old field name for Survey Feedback date.</description>
        <formula>Survey_Taken__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Feedback_Type__c</fullName>
        <inlineHelpText>&quot;Resolve=A caller has called more then two times and their issue is unresolved. 
Review=A caller had either a) called more then two times and their issue is resolved or b) Has a survey score that is less than or equal to 6.&quot;</inlineHelpText>
        <label>Survey Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolve</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_ID_F__c</fullName>
        <formula>Survey_Taken__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Survey_Taken__r.Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Survey_Taken__r.Id &amp; &quot;&apos;}&quot;, Survey_Taken__r.Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taken_By_Contact_Txt__c</fullName>
        <label>Survey Taken By Contact</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taken_By_Contact__c</fullName>
        <formula>Survey_Taken__r.Contact__r.FirstName &amp; &apos; &apos; &amp; Survey_Taken__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Taken By Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taken__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipLabel>Survey Feedbacks</relationshipLabel>
        <relationshipName>Survey_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <inlineHelpText>What is the Target Completion Date? High Priority=1 Business day and Medium Priority=2 Business Days</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_3_Point_of_Contact__c</fullName>
        <inlineHelpText>Who is the Tier 3 Point of Contact that is assisting you?</inlineHelpText>
        <label>Tier 3 Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unresolved_Reason__c</fullName>
        <label>Unresolved Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Reliant</fullName>
                </value>
                <value>
                    <fullName>Approvals Pending</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer Requested Info</fullName>
                </value>
                <value>
                    <fullName>Customer Not Satisfied with Resolution</fullName>
                </value>
                <value>
                    <fullName>Previous Calls Unrelated to Current Issue</fullName>
                </value>
                <value>
                    <fullName>Referred to HRBP</fullName>
                </value>
                <value>
                    <fullName>SR in Process</fullName>
                </value>
                <value>
                    <fullName>Timeframe Process Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <formula>Survey_Taken__r.Contact__r.Vendor_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation__c</fullName>
        <formula>IF( ISBLANK(Closed_Date__c ) ,IF( today() &gt; Target_Completion_Date__c ,IMAGE(&quot;/img/entitlement/casemilestone_isviolated.png&quot;,&quot;RED&quot;) ,&apos; &apos;),&apos; &apos;)</formula>
        <label>Violation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Closed_Inquiry__c</fullName>
        <label>Who Closed Inquiry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey Feedback</label>
    <listViews>
        <fullName>Accounts_Payable</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Accounts Payable</value>
        </filters>
        <label>S3 Accounts Payable</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Central_Business_Office_CBO</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Central Business Office (CBO)</value>
        </filters>
        <label>S3 Central Business Office (CBO)</label>
    </listViews>
    <listViews>
        <fullName>HR_Benefits</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>HR Benefits</value>
        </filters>
        <label>S3 HR Benefits</label>
    </listViews>
    <listViews>
        <fullName>HR_Compensation_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>HR Compensation</value>
        </filters>
        <label>S3 HR Compensation</label>
    </listViews>
    <listViews>
        <fullName>HR_Defined_Contribution</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Defined Contribution</value>
        </filters>
        <label>S3 HR Defined Contribution</label>
    </listViews>
    <listViews>
        <fullName>HR_Information_System_HRIS</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>HR Information System (HRIS)</value>
        </filters>
        <label>S3 HR Information System (HRIS)</label>
    </listViews>
    <listViews>
        <fullName>HR_Learning</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Learning</value>
        </filters>
        <label>S3 HR Learning</label>
    </listViews>
    <listViews>
        <fullName>HR_Pension</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>HR Pension</value>
        </filters>
        <label>S3 HR Pension</label>
    </listViews>
    <listViews>
        <fullName>HR_Recruitment</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Recruitment</value>
        </filters>
        <label>S3 HR Recruitment</label>
    </listViews>
    <listViews>
        <fullName>HR_Workforce_Relations</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Workforce Relations</value>
        </filters>
        <label>S3 HR Workforce Relations</label>
    </listViews>
    <listViews>
        <fullName>Payroll_T_E</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Payroll/T&amp;E</value>
        </filters>
        <label>S3 Payroll T&amp;E</label>
    </listViews>
    <listViews>
        <fullName>Purchasing</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Function__c</field>
            <operation>equals</operation>
            <value>Purchasing</value>
        </filters>
        <label>S3 Purchasing</label>
    </listViews>
    <listViews>
        <fullName>Recently_Viewed_Survey_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Mine</filterScope>
        <label>Recently Viewed Survey Feedback</label>
    </listViews>
    <listViews>
        <fullName>Survey_Feedback_Queue_Survey_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Survey_Feedback_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Violation__c</columns>
        <filterScope>Queue</filterScope>
        <label>Queue:Survey Feedback</label>
        <queue>Survey_Feedback_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SF-{00000}</displayFormat>
        <label>Survey Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Feedback</pluralLabel>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <label>Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee_RO</fullName>
        <active>true</active>
        <label>Employee RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_RO</fullName>
        <active>true</active>
        <label>Vendor RO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Feedback_Status_to_New</fullName>
        <active>true</active>
        <description>Added as part of Req-3464</description>
        <errorConditionFormula>AND( NOT( ISPICKVAL( PRIORVALUE( Status__c ) , &apos;New&apos;) ) , ISPICKVAL( Status__c , &apos;New&apos;))</errorConditionFormula>
        <errorMessage>Status cannot be changed back to &quot;New&quot;.</errorMessage>
    </validationRules>
</CustomObject>